--- a/module/User/view/user/user/delete.phtml
+++ b/module/User/view/user/user/delete.phtml
@@ -1,23 +1,23 @@
 <?php
 
-$title = 'Delete album';
+$title = 'Delete user';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
 
 <p>Are you sure that you want to delete
-    '<?php echo $this->escapeHtml($album->title); ?>' by
-    '<?php echo $this->escapeHtml($album->artist); ?>'?
+    '<?php echo $this->escapeHtml($user->name); ?>':
+    '<?php echo $this->escapeHtml($user->password); ?>'?
 </p>
 <?php
-$url = $this->url('album', array(
+$url = $this->url('user', array(
     'action' => 'delete',
     'id' => $this->id,
 ));
 ?>
 <form action="<?php echo $url; ?>" method="post">
     <div>
-        <input type="hidden" name="id" value="<?php echo (int)$album->id; ?>"/>
+        <input type="hidden" name="id" value="<?php echo (int)$user->id; ?>"/>
         <input type="submit" name="del" value="Yes"/>
         <input type="submit" name="del" value="No"/>
     </div>
