--- a/module/User/view/user/user/edit.phtml
+++ b/module/User/view/user/user/edit.phtml
@@ -1,22 +1,22 @@
 <?php
-$title = 'Edit album';
+$title = 'Edit user';
 $this->headTitle($title);
 ?>
     <h1><?php echo $this->escapeHtml($title); ?></h1>
 <?php
 $form = $this->form;
 $form->setAttribute('action', $this->url(
-    'album',
-    array(
+    'user',
+    [
         'action' => 'edit',
         'id' => $this->id,
-    )
+    ]
 ));
 $form->prepare();
 
 echo $this->form()->openTag($form);
 echo $this->formHidden($form->get('id'));
-echo $this->formRow($form->get('title'));
-echo $this->formRow($form->get('artist'));
+echo $this->formRow($form->get('username'));
+echo $this->formRow($form->get('password'));
 echo $this->formSubmit($form->get('submit'));
 echo $this->form()->closeTag();
