Fix user edition form

--- a/module/User/view/user/user/edit.phtml
+++ b/module/User/view/user/user/edit.phtml
@@ -18,5 +18,6 @@ echo $this->form()->openTag($form);
 echo $this->formHidden($form->get('id'));
 echo $this->formRow($form->get('username'));
 echo $this->formRow($form->get('password'));
+echo $this->formRow($form->get('role'));
 echo $this->formSubmit($form->get('submit'));
 echo $this->form()->closeTag();
