--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -41,6 +41,15 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a>
                 </li>
+                <li>
+                    <a href="<?php echo $this->url('album',['index']); ?>">Album</a>
+                </li>
+                <li>
+                    <a href="<?php echo $this->url('user',['index']); ?>">User</a>
+                </li>
+                <li>
+                    <a href="<?php echo $this->url('authentication'); ?>">Login</a>
+                </li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
