Refactor Acl as service

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -9,4 +9,6 @@
     <?php echo $this->navigation('navigation')->menu(); ?>
 
     <?php echo $this->layout()->someVar; ?>
+
+    <?php echo $this->authentication(); ?>
 </div>
