--- a/module/User/view/user/auth/login.phtml
+++ b/module/User/view/user/auth/login.phtml
@@ -11,7 +11,7 @@ $this->headTitle($title);
         <input type="text" name="username">
     </label>
     <label>
-        Password <input type="text" name="password">
+        Password <input type="password" name="password">
     </label>
     <input type="submit" value="Login">
 </form>
