--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -10,5 +10,5 @@
 
     <?php echo $this->layout()->someVar; ?>
 
-    <?php echo $this->authentication(); ?>
+    <?php echo $this->authentication()->getCurrentUser(); ?>
 </div>
